Unit Tests applied